--- a/style.css
+++ b/style.css
@@ -1,1 +1,23 @@
 /* Start coding here */
+*{
+    margin: 0;
+    padding: 0;
+}
+.container{
+    background-color: lightgray;
+    padding: 50px;
+    height: 100vh;
+}
+.box-1{
+    background-color: orange;
+    height: 25%;
+    }
+.box-2{
+    background-color: khaki;
+    height: 25%;
+    
+        }
+.box-3{
+    background-color:cornflowerblue ;
+    height: 50%;
+        }
