--- a/style.css
+++ b/style.css
@@ -1,1 +1,55 @@
 /* Start coding here */
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+}
+
+.container {
+    height: 100vh;
+    width: 100vw;
+    padding: 50px;
+    background-color: lightgrey;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+
+}
+
+
+.box {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: black;
+    padding: 10px;
+    box-sizing: border-box
+}
+
+.box-1 {
+    flex: 1;
+    background-color: khaki;
+    width: 100%;
+    height: 100%;
+  }
+
+  
+  .box-2 {
+    flex: 1; 
+    background-color: orange;
+    width: 100%;
+    height: 100%;
+  }
+
+
+  .box-3 {
+    flex: 2; 
+    background-color: cornflowerblue;
+    width: 100%;
+    height: 100%;
+  }
